--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header>
     <div class="header-inner">
+      <div class="header-logo">
+        <a><img src="imgs/logo.png" class='icon' alt='logo' /></a>       
+      </div>
 
-      <a href="#"><img src="imgs/logo.png" class='icon' alt='logo' /></a>
-    <div class="nav">
-      <nav class="header-nav" id="js-nav">
-        <ul>       
-          <li><a class="nav-link">ABOUT</a></li>
-          <li><a class="nav-link">WORKS</a></li>
-          <li><a class="nav-link">REFERENCE</a></li>
+      <nav>       
+        <ul>
+          <li><a class="nav-link" href="#">ABOUT</a></li>
+          <li><a class="nav-link" href="#">WORKS</a></li>
+          <li><a class="nav-link" href="#">REFERENCE</a></li>
         </ul>
       </nav>
-      
+
+      <button id="js-hamburger" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
 
     </div>
-    
-
-    </div>
+  
   </header>
+
 
   <main>
     <div class="text-container">
