--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a><img src="imgs/logo.png" class='icon' alt='logo' /></a>       
       </div>
 
-      <nav>       
+      <nav id="js-nav">       
         <ul>
           <li><a class="nav-link" href="#">ABOUT</a></li>
           <li><a class="nav-link" href="#">WORKS</a></li>
