--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <header>
     <div class="header-inner">
       <div class="header-logo">
-        <a><img src="imgs/logo.png" class='icon' alt='logo' /></a>       
+        <a><img src="imgs/logo.png" alt='logo' class="header-logo"></a>       
       </div>
 
       <nav id="js-nav">       
         <ul>
-          <li><a class="nav-link" href="#">ABOUT</a></li>
+          <li><a class="nav-link" href="about.html">ABOUT</a></li>
           <li><a class="nav-link" href="#">WORKS</a></li>
           <li><a class="nav-link" href="#">REFERENCE</a></li>
         </ul>
