--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav id="js-nav">       
         <ul>
           <li><a class="nav-link" href="about.html">ABOUT</a></li>
-          <li><a class="nav-link" href="#">WORKS</a></li>
+          <li><a class="nav-link" href="works.html">WORKS</a></li>
           <li><a class="nav-link" href="#">REFERENCE</a></li>
         </ul>
       </nav>
