--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
   <header>
     <div class="header-inner">
       <div class="header-logo">
-        <a><img src="imgs/logo.png" class="header-logo" alt='logo' /></a>       
+        <a href="index.html"><img src="imgs/logo.png" class="header-logo" alt='logo' /></a>       
       </div>
 
       <nav id="js-nav">       
         <ul>
           <li><a class="nav-link" href="about.html">ABOUT</a></li>
-          <li><a class="nav-link" href="#">WORKS</a></li>
-          <li><a class="nav-link" href="#">REFERENCE</a></li>
+          <li><a class="nav-link" href="works.html">WORKS</a></li>
+          <li><a class="nav-link" href="reference.html">REFERENCE</a></li>
         </ul>
       </nav>
 
