--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         </p>
       </div>
       <div class='main-img-container'>
-        <img src="imgs/bio.jpg" class='main-img' alt='main-img'></img>
+        <img src="imgs/purple-circle.png" class="main-img-bg" alt="main-background-img"></img>
+        <img src="imgs/bio1.png" class='main-img' alt='main-img'></img>
+        
       </div>
     </div>
   </main>
