--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
         I’m excited to continue learning and growing as a front-end developer and look forward to contributing to exciting projects in the future!
         </p>
       </div>
-      <div class='main-img-container'>
-        <img src="imgs/purple-circle.png" class="main-img-bg" alt="main-background-img"></img>
-        <img src="imgs/bio1.png" class='main-img' alt='main-img'></img>
-        
+      <div class='main-img-container'>       
+        <img src="imgs/bio.jpg" class='main-img' alt='main-img'></img>
       </div>
+      
     </div>
   </main>
 
