updated scroll fade

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     
     </div>
   
-    <div class="skills-container">
+    <div class="skills-container reveal">
       <h2 class="sub-title">SKILLS</h2>
       <ul>
         <li>Proficient with HTML, CSS, JavaScript, React, Bootstrap</li>
@@ -72,7 +72,7 @@
       </div>
     </div>
   
-    <div class="work-container">
+    <div class="work-container reveal">
       <h2 class="sub-title">EXPERIENCE</h2>
   
       <div class='work-experience'>
@@ -85,7 +85,7 @@
         </div>
       </div>
   
-      <div class='work-experience'>
+      <div class='work-experience reveal'>
         <div class='work-title'>
           <h3>Translator/Administrator</h3>
           <p>Vancouver Japanese Language School and Japanese Hall, Vancouver, Canada<br></br>2021 Apr- 2022 May</p>
@@ -95,7 +95,7 @@
         </div>
       </div>
   
-      <div class='work-experience'>
+      <div class='work-experience reveal'>
         <div class='work-title'>
           <h3>Public Servant -Public School Administration</h3>
           <p>Yamatsuri Junior High School, Fukushima, Japan<br></br>2009 Apr - 2013 Mar</p>
@@ -107,7 +107,7 @@
       </div>
     </div>
   
-    <div class="interests-container">       
+    <div class="interests-container reveal">       
       <h2 class="sub-title">INTERESTS</h2>
       <ul>
         <li>Hiking -Panorama Ridge in Garibaldi Park is undoubtedly my favorite trail!</li>
