--- a/reference.html
+++ b/reference.html
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class='reference'>
+      <div class='reference reveal'>
         <div>
           <img src="imgs/darius.jpg"class='bio-img' alt='bio-img'></img>
         </div>
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div class='reference'>
+      <div class='reference reveal'>
         <div>
           <img src="imgs/mika.jpg" class='bio-img' alt='bio-img'></img>
         </div>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class='reference'>
+      <div class='reference reveal'>
         <div>
           <img src="imgs/kanei.jpg"class='bio-img' alt='bio-img'></img>
         </div>
