--- a/works.html
+++ b/works.html
@@ -36,14 +36,14 @@
     <p class='works-intro'>Here are some of my works in web design and front-end development focusing on user-friendly design.</p>
 
     <div class='works-container'>
-      <div class='work'>
+      <div class='work reveal'>
         <img src="imgs/vjls-jh.jpg"class='work-img' alt='work-img'></img>
         <h3 class='site-title'>School Website</h3>
         <p class='site-desc'>Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
         <a href='https://vjls-jh.com/' class='btn' target="_blank" rel="noreferrer">See the site</a>  
       </div>
 
-      <div class='work'>
+      <div class='work reveal'>
         <img src="imgs/ecsite.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>E-Commerce Website</h3>
         <p class='site-desc'>This is my E-Commerce website featuring WooCommerce – a sneak peek of my future small business! With easy navigation and categories, finding what you want is a breeze. Check out the site and stay tuned for real products coming out in the near future!</p>
@@ -51,7 +51,7 @@
     
       </div>
 
-      <div class='work'>
+      <div class='work reveal'>
         <img src="imgs/best-gourmet.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Company Website</h3>
         <p class='site-desc'>Explore the sample website of an actual coffee company based in BC that I redesigned and rebuilt using WordPress. I aimed to create a modern, simple, and easy-to-navigate site that effectively showcases the company's unique points and features.</p>
@@ -60,14 +60,14 @@
       </div>
 
     
-      <div class='work'>
+      <div class='work reveal'>
         <img src="imgs/movie-watchlist.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Movie Watchlist</h3>
         <p class='site-desc'>Check out my React-based movie watchlist using API data, where you can serch your favorite films and save them to your list for future viewing!</p>
         <a href='https://movie-watchlist-cy.netlify.app' class='btn' target="_blank" rel="noreferrer">See the site</a>
       </div>
 
-      <div class='work'>
+      <div class='work reveal'>
         <img src="imgs/recipe.jpg"class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Recipe App</h3>
         <p class='site-desc'>Check my recipe app designed for me and my partner as an international couple and vegetable lover! Easy to find our favorites and get ingredients and instructions without reading long summaries commonly found on recipe websites!</p>
