--- a/about.html
+++ b/about.html
@@ -78,7 +78,11 @@
       <div class='work-experience'>
         <div class='work-title'>
           <h3>Communications Coordinator</h3>
-          <p>Vancouver Japanese Language School and Japanese Hall, Vancouver, Canada<br></br>2022 Jun- 2023 Mar</p>
+          <div class="company">
+            <p>Vancouver Japanese Language School and Japanese Hall, Vancouver, Canada</p>
+            <p>2022 Jun- 2023 Mar</p>
+          </div>
+          
         </div>
         <div class='work-desc'>
           <p>Led a new website launch project for a 110+ year old organization that provides day care, Japanese programs from children to adults and community events. After the new website went live, I was fully responsible for updating and maintaining the site using WordPress. I was also responsible for designing and creating social media posts, monthly e-newsletters, as well as creating posters for internal and external distribution to expand the organization's programs and activities. </p>
@@ -88,7 +92,11 @@
       <div class='work-experience reveal'>
         <div class='work-title'>
           <h3>Translator/Administrator</h3>
-          <p>Vancouver Japanese Language School and Japanese Hall, Vancouver, Canada<br></br>2021 Apr- 2022 May</p>
+          <div class="company">
+            <p>Vancouver Japanese Language School and Japanese Hall, Vancouver, Canada</p>
+            <p>2021 Apr- 2022 May</p>
+          </div>
+        
         </div>
         <div class='work-desc'>
           <p>In charge of translating internal and external letters, website contents, articles for e-newsletter and social media from English to Japanese and vice versa, as well as administrative tasks such as managing registrations closely working with manager and accountant.</p>
@@ -98,8 +106,15 @@
       <div class='work-experience reveal'>
         <div class='work-title'>
           <h3>Public Servant -Public School Administration</h3>
-          <p>Yamatsuri Junior High School, Fukushima, Japan<br></br>2009 Apr - 2013 Mar</p>
-          <p>Tominari Elementary School, Fukushima, Japan<br></br>2013 Apr - 2018 Mar</p>
+          <div class="company">
+            <p>Yamatsuri Junior High School, Fukushima, Japan<p>
+            <p>2009 Apr - 2013 Mar</p>
+          </div>
+          <div class="company">
+            <p>Tominari Elementary School, Fukushima, Japan<p>
+            <p>2013 Apr - 2018 Mar</p>
+
+          </div>
         </div>
         <div class='work-desc'>
           <p>In charge of a wide range of duties for public schools with around 30 teachers and 200 students. Fully responsible for financial accounting and budget management and acting as the first point of contact for the school board, students’ guardians as well as visitors.</p>
