--- a/reference.html
+++ b/reference.html
@@ -54,7 +54,7 @@
         </div>
         <div class='bio'>
           <h3 class='bio-name'>Darius Maze</h3>
-          <h4 class='bio-title'>VJLS-JH<br></br>Excective Director</h4>
+          <h4 class='bio-title'>Excective Director at VJLS-JH</h4>
           <p class='bio-text'>“Chiaki was a fantastic member of the team at VJLS-JH and helped us to develop a strong, consistent visual and brand identity for the organization. She was very collaborative and well organized as she developed all of our marketing materials, including a new website refresh that brought improvements to accessibility, navigation, and customer engagement. I look forward to working with her again in the future and highly recommend her as a communications professional and web developer.”</p>
         </div>
       </div>
@@ -65,7 +65,7 @@
         </div>
         <div class='bio'>
           <h3 class='bio-name'>Mika Embury</h3>
-          <h4 class='bio-title'>VJLS-JH<br></br>People and Culture Coordinator</h4>
+          <h4 class='bio-title'>People and Culture Coordinator at VJLS-JH</h4>
           <p class='bio-text'>“I loved working with Chiaki! She is hardworking, reliable, and fun. She brings her unique, international, multicultural experience to the workplace, greatly benefiting our organizational culture. Chiaki was also key in developing and launching our new website, bringing a ton of positive attention to our organization and programs!”</p>
         </div>
       </div>
@@ -76,7 +76,7 @@
         </div>
         <div class='bio'>
           <h3 class='bio-name'>Kanei Ou</h3>
-          <h4 class='bio-title'>VJLS-JH<br></br>Accounting Coordinator</h4>
+          <h4 class='bio-title'>Accounting Coordinator at VJLS-JH</h4>
           <p class='bio-text'>“I worked with Chiaki for about a year and I witnessed her single-handedly launching our organization's new website. Through the project, she demonstrated her good sense of color and strong communication skills with third-party developers. She's easy to talk to and a true team player.”</p>
         </div>
       </div>
