--- a/works.html
+++ b/works.html
@@ -63,7 +63,7 @@
       <div class='work reveal'>
         <img src="imgs/movie-watchlist.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Movie Watchlist</h3>
-        <p class='site-desc'>Check out my React-based movie watchlist using API data, where you can serch your favorite films and save them to your list for future viewing!</p>
+        <p class='site-desc'>Check out my React-based movie watchlist application, where you can search for your favorite films and save them to your list for future viewing! Once you've watched a movie, you can move it to the watched list by simply clicking the eye icon.</p>
         <a href='https://movie-watchlist-cy.netlify.app' class='btn' target="_blank" rel="noreferrer">See the site</a>
       </div>
 
