--- a/works.html
+++ b/works.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta class="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chiaki Yamada</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -36,14 +36,14 @@
     <p class='works-intro'>Here are some of my works in web design and front-end development focusing on user-friendly design.</p>
 
     <div class='works-container'>
-      <div class='work reveal'>
+      <div class='work'>
         <img src="imgs/vjls-jh.jpg"class='work-img' alt='work-img'></img>
         <h3 class='site-title'>School Website</h3>
         <p class='site-desc'>Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
         <a href='https://vjls-jh.com/' class='btn' target="_blank" rel="noreferrer">See the site</a>  
       </div>
 
-      <div class='work reveal'>
+      <div class='work'>
         <img src="imgs/ecsite.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>E-Commerce Website</h3>
         <p class='site-desc'>This is my E-Commerce website featuring WooCommerce – a sneak peek of my future small business! With easy navigation and categories, finding what you want is a breeze. Check out the site and stay tuned for real products coming out in the near future!</p>
