--- a/reference.html
+++ b/reference.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="ico/favicon.ico">
   <title>Chiaki Yamada</title>
+  <link rel="stylesheet" href="css/swiper.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,14 +14,14 @@
   <header>
     <div class="header-inner">
       <div class="header-logo">
-        <a href="index.html"><img src="imgs/logo.png" alt='logo' class="header-logo"></a>       
+        <a href="https://chiakiy.com"><img src="imgs/logo.png" alt='logo' class="header-logo"></a>       
       </div>
 
       <nav id="js-nav">       
         <ul>
-          <li><a class="nav-link" href="about.html">ABOUT</a></li>
-          <li><a class="nav-link" href="works.html">WORKS</a></li>
-          <li><a class="nav-link" href="reference.html">REFERENCE</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/about">ABOUT</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/works">WORKS</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/reference">REFERENCE</a></li>
         </ul>
       </nav>
 
@@ -102,7 +104,8 @@
       <img src="imgs/footer.png" class="footer-img" alt="footer-img"></img>
     </div> 
   </footer>
-
-<script src="js/app.js"></script>
+  
+  <script src="js/swiper.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
