--- a/works.html
+++ b/works.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="ico/favicon.ico">
   <title>Chiaki Yamada</title>
+  <link rel="stylesheet" href="css/swiper.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,14 +14,14 @@
   <header>
     <div class="header-inner">
       <div class="header-logo">
-        <a href="index.html"><img src="imgs/logo.png" alt='logo' class="header-logo"></a>       
+        <a href="https://chiakiy.com"><img src="imgs/logo.png" alt='logo' class="header-logo"></a>       
       </div>
 
       <nav id="js-nav">       
         <ul>
-          <li><a class="nav-link" href="about.html">ABOUT</a></li>
-          <li><a class="nav-link" href="works.html">WORKS</a></li>
-          <li><a class="nav-link" href="reference.html">REFERENCE</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/about">ABOUT</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/works">WORKS</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/reference">REFERENCE</a></li>
         </ul>
       </nav>
 
@@ -44,14 +46,6 @@
       </div>
 
       <div class='work'>
-        <img src="imgs/ecsite.jpg" class='work-img' alt='work-img'></img>
-        <h3 class='site-title'>E-Commerce Website</h3>
-        <p class='site-desc'>This is my E-Commerce website featuring WooCommerce – a sneak peek of my future small business! With easy navigation and categories, finding what you want is a breeze. Check out the site and stay tuned for real products coming out in the near future!</p>
-        <a href='https://cplusgear.chiakiy.com/' class='btn coffee-btn' target="_blank" rel="noreferrer">See the site</a>
-    
-      </div>
-
-      <div class='work reveal'>
         <img src="imgs/best-gourmet.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Company Website</h3>
         <p class='site-desc'>Explore the sample website of an actual coffee company based in BC that I redesigned and rebuilt using WordPress. I aimed to create a modern, simple, and easy-to-navigate site that effectively showcases the company's unique points and features.</p>
@@ -59,7 +53,14 @@
         <a href='https://drive.google.com/file/d/15nCqZB0VfOOUNYu3wb-lwIM0uo1dMA_p/view?usp=sharing' class='btn coffee-btn' target="_blank" rel="noreferrer">Project</a>
       </div>
 
+      <div class='work reveal'>
+        <img src="imgs/ecsite.jpg" class='work-img' alt='work-img'></img>
+        <h3 class='site-title'>E-Commerce Website</h3>
+        <p class='site-desc'>This is my E-Commerce website featuring WooCommerce – a sneak peek of my future small business! With easy navigation and categories, finding what you want is a breeze. Check out the site and stay tuned for real products coming out in the near future!</p>
+        <a href='https://cplusgear.chiakiy.com/' class='btn coffee-btn' target="_blank" rel="noreferrer">See the site</a>
     
+      </div>
+
       <div class='work reveal'>
         <img src="imgs/movie-watchlist.jpg" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Movie Watchlist</h3>
@@ -95,6 +96,7 @@
     </div> 
   </footer>
 
-<script src="js/app.js"></script>
+  <script src="js/swiper.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
