--- a/works.html
+++ b/works.html
@@ -20,7 +20,7 @@
       <nav id="js-nav">       
         <ul>
           <li><a class="nav-link" href="https://chiakiy.com/about">ABOUT</a></li>
-          <li><a class="nav-link" href="https://chiakiy.com/works">WORKS</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/works">WORK</a></li>
           <li><a class="nav-link" href="https://chiakiy.com/reference">REFERENCE</a></li>
         </ul>
       </nav>
@@ -34,7 +34,7 @@
   </header>
 
   <main>
-    <h1 class='title'>WORKS</h1>
+    <h1 class='title'>WORK</h1>
     <p class='works-intro'>Here are some of my works in web design and front-end development focusing on user-friendly design.</p>
 
     <div class='works-container'>
