--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav id="js-nav">       
         <ul>
           <li><a class="nav-link" href="https://chiakiy.com/about">ABOUT</a></li>
-          <li><a class="nav-link" href="https://chiakiy.com/works">WORKS</a></li>
+          <li><a class="nav-link" href="https://chiakiy.com/works">WORK</a></li>
           <li><a class="nav-link" href="https://chiakiy.com/reference">REFERENCE</a></li>
         </ul>
       </nav>
