--- a/about.html
+++ b/about.html
@@ -33,8 +33,12 @@
   </header>
 
   <main>
-    <h1 class='title'>ABOUT</h1>
-    <div class="about-container">       
+    <h1 class='title'>ABOUT</h1>    
+    <div class="about-container">
+      <div class="about-bio">
+        <img src="imgs/chiaki.jpg" alt="bio-img" class="about-bio-img">
+      </div>
+           
       <h2>Konnichiwa!</h2>
       <p>Hi I’m Chiaki, a self-taught web developer with a passion for creating intuitive and functional websites.</p> 
       <p>My coding journey began when I was in my previous role as a communications coordinator. I had the opportunity to work with a front-end developer to build and design a new website from the ground up tailored to the needs of the organization.Creating layout and contents and seeing it take shape was very exciting, and it left me with a burning desire to learn more about UI design and development. <br></br>Since then, I started taking courses to gain the skills necessary to create a website on my own and have been studying at every chance I got. Recently, I completed <a href='https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/71780354' target="_blank" rel="noreferrer">a formal degree</a> in front-end web development.</p>
@@ -63,6 +67,7 @@
         <img src="imgs/javascript.svg" class='icon' alt='javascript-icon'></img>
         <img src="imgs/wordpress.svg" class='icon' alt='wordpress-icon'></img>
         <img src="imgs/woocommerce.svg" class='icon' alt='woocommerce-icon'></img>
+        <img src="imgs/php.svg" class='icon' alt='php-icon'></img>
         <img src="imgs/react.svg" class='icon' alt='react-icon'></img>
         <img src="imgs/bootstrap.svg"class='icon' alt='bootstrap-icon'></img>         
         <img src="imgs/figma.svg" class='icon' alt='figma-icon'></img>
