--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <span></span>
       </button>
 
-
     </div>
   
   </header>
@@ -47,22 +46,24 @@
         <p class='main-desc'>Hi! I’m Chiaki Yamada, a self-taught web developer with a passion for creating intuitive and functional websites and applications.  <br></br>
         I’m excited to continue learning and growing as a front-end developer and look forward to contributing to exciting projects in the future!
         </p>
-        <p><a href="https://chiakiy.com/about" class="arrow">Learn More</a></p>
+        <p><a href="https://chiakiy.com/about" class="arrow">Learn More About Me</a></p>
       </div>
       <div class='main-img-container'>       
-        <img src="imgs/bio.jpg" class='main-img' alt='main-img'></img>
+        <img src="imgs/home-img.jpg" class='main-img' alt='main-img'></img>
       </div>
       
     </div>
 
-    <div class="skills-container home-skills reveal">
+    <!-- tech stack -->
+    <div class="tech-stack reveal">
       <h1 class="title">Tech Stack</h1>
       <ul>
         <li>HTML</li>
         <li>CSS</li>
-        <li>JavaScript</li>
+        <li>JavaScript</li>       
         <li>WordPress</li>
         <li>WooCommerce</li>
+        <li>PHP</li>
         <li>React</li>
         <li>Bootstrap</li>              
         <li>Figma</li>
@@ -70,6 +71,7 @@
       </ul>
     </div>
 
+    <!-- work slider -->
     <div class="slide-container swiper reveal">
       <h1 class="title">Work</h1>
       <div class="slide-content">
@@ -78,64 +80,96 @@
           <div class="card swiper-slide">
             <div class="image-content">
               <div class="card-image">
-                <img src="imgs/vjls-jh.jpg" alt="" class="card-img">
+                <img src="imgs/vjls-jh.png" alt="" class="card-img">
               </div>
             </div>
             <div class="card-content">
               <h2 class="name">School Website</h2>
               <p class="description">Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
               <div class="slider-logo">
-                <img src="imgs/wordpress.svg" alt="icon" class="icon">
+                <img src="imgs/wordpress-b.svg" alt="icon">
               </div>
-              <p><a href="#" class="arrow">View This Work</a></p>
+              <p><a href="https://vjls-jh.com" class="arrow">View This Work</a></p>
             </div>
           </div>
 
           <div class="card swiper-slide">
             <div class="image-content">
               <div class="card-image">
-                <img src="imgs/vjls-jh.jpg" alt="" class="card-img">
+                <img src="imgs/best-gourmet.png" alt="" class="card-img">
               </div>
             </div>
             <div class="card-content">
-              <h2 class="name">School Website</h2>
-              <p class="description">Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
+              <h2 class="name">Company Website</h2>
+              <p class="description">Explore the sample website of an actual coffee company based in BC that I redesigned and rebuilt using WordPress. I aimed to create a modern, simple, and easy-to-navigate site that effectively showcases the company's unique points and features.</p>
               <div class="slider-logo">
-                <img src="imgs/wordpress.svg" alt="icon" class="icon">
+                <img src="imgs/wordpress-b.svg" alt="icon">
+                <img src="imgs/html-b.svg" alt="icon">
+                <img src="imgs/css-b.svg" alt="icon">
+                <img src="imgs/javascript-b.svg" alt="icon">
+                <img src="imgs/php-b.svg" alt="icon">
               </div>
-              <p><a href="#" class="arrow">View This Work</a></p>
+              <p><a href="https://best-gourmet-coffee.netlify.app" class="arrow">View This Work</a></p>
             </div>
           </div>
 
           <div class="card swiper-slide">
             <div class="image-content">
               <div class="card-image">
-                <img src="imgs/vjls-jh.jpg" alt="" class="card-img">
+                <img src="imgs/ecsite.png" alt="" class="card-img">
               </div>
             </div>
             <div class="card-content">
-              <h2 class="name">School Website</h2>
-              <p class="description">Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
+              <h2 class="name">E-Commerce Website</h2>
+              <p class="description">This is my E-Commerce website featuring WooCommerce – a sneak peek of my future small business! With easy navigation and categories, finding what you want is a breeze. Check out the site and stay tuned for real products coming out in the near future!</p>
               <div class="slider-logo">
-                <img src="imgs/wordpress.svg" alt="icon" class="icon">
+                <img src="imgs/wordpress-b.svg" alt="icon">
+                <img src="imgs/woocommerce-b.svg" alt="icon">
+                <img src="imgs/html-b.svg" alt="icon">
+                <img src="imgs/css-b.svg" alt="icon">
+                <img src="imgs/javascript-b.svg" alt="icon">
+                <img src="imgs/php-b.svg" alt="icon">
               </div>
-              <p><a href="#" class="arrow">View This Work</a></p>
+              <p><a href="https://cplusgear.chiakiy.com" class="arrow">View This Work</a></p>
             </div>
           </div>
 
           <div class="card swiper-slide">
             <div class="image-content">
               <div class="card-image">
-                <img src="imgs/vjls-jh.jpg" alt="" class="card-img">
+                <img src="imgs/movie-watchlist.png" alt="" class="card-img">
               </div>
             </div>
             <div class="card-content">
-              <h2 class="name">School Website</h2>
-              <p class="description">Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
+              <h2 class="name">Movie Watchlist</h2>
+              <p class="description">Check out my React-based movie watchlist application, where you can search for your favorite films and save them to your list for future viewing! Once you've watched a movie, you can move it to the watched list by simply clicking the eye icon.</p>
               <div class="slider-logo">
-                <img src="imgs/wordpress.svg" alt="icon" class="icon">
+                <img src="imgs/html-b.svg" alt="icon">
+                <img src="imgs/css-b.svg" alt="icon">
+                <img src="imgs/javascript-b.svg" alt="icon">
+                <img src="imgs/react-b.svg" alt="icon">
+                
               </div>
-              <p><a href="#" class="arrow">View This Work</a></p>
+              <p><a href="https://movie-watchlist-cy.netlify.app" class="arrow">View This Work</a></p>
+            </div>
+          </div>
+
+          <div class="card swiper-slide">
+            <div class="image-content">
+              <div class="card-image">
+                <img src="imgs/recipe.png" alt="" class="card-img">
+              </div>
+            </div>
+            <div class="card-content">
+              <h2 class="name">Recipe App</h2>
+              <p class="description">Check my recipe app designed for me and my partner as an international couple and vegetable lover! Easy to find our favorites and get ingredients and instructions without reading long summaries commonly found on recipe websites!</p>
+              <div class="slider-logo">
+                <img src="imgs/html-b.svg" alt="icon">
+                <img src="imgs/css-b.svg" alt="icon">
+                <img src="imgs/javascript-b.svg" alt="icon">
+                <img src="imgs/react-b.svg" alt="icon">
+              </div>
+              <p><a href="https://foodie-recipe-cy.netlify.app" class="arrow">View This Work</a></p>
             </div>
           </div>
         </div>
