--- a/index.html
+++ b/index.html
@@ -186,10 +186,11 @@
         <p>Contact:</p>
         <a href="mailto:info@chiakiy.com">info@chiakiy.com</a>
       </div>
+      <div class="footer-icon">
+        <a href="https://www.linkedin.com/in/chiaki-y-ab290a206"><img src="imgs/linkedin.svg" alt="linkedin-icon"></a>
+        <a href="https://github.com/chiaki-yamada"><img src="imgs/github.svg" alt="github-icon"></a>        
+      </div>
       <p class='copy-right'>© 2023 Chiaki Yamada</p>
-    </div> 
-    <div class="footer-img">
-      <img src="imgs/footer.png" class="footer-img" alt="footer-img"></img>
     </div> 
   </footer>
 
