--- a/works.html
+++ b/works.html
@@ -39,14 +39,14 @@
 
     <div class='works-container'>
       <div class='work'>
-        <img src="imgs/vjls-jh.jpg"class='work-img' alt='work-img'></img>
+        <img src="imgs/vjls-jh.png"class='work-img' alt='work-img'></img>
         <h3 class='site-title'>School Website</h3>
         <p class='site-desc'>Explore the WordPress website that I helped design, focusing on consistency and a well-structured layout, while also creating engaging content. This mobile-friendly website offers easy navigation and provides an enjoyable browsing experience.</p>
         <a href='https://vjls-jh.com/' class='btn' target="_blank" rel="noreferrer">See the site</a>  
       </div>
 
       <div class='work'>
-        <img src="imgs/best-gourmet.jpg" class='work-img' alt='work-img'></img>
+        <img src="imgs/best-gourmet.png" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Company Website</h3>
         <p class='site-desc'>Explore the sample website of an actual coffee company based in BC that I redesigned and rebuilt using WordPress. I aimed to create a modern, simple, and easy-to-navigate site that effectively showcases the company's unique points and features.</p>
         <a href='https://best-gourmet-coffee.netlify.app' class='btn coffee-btn' target="_blank" rel="noreferrer">See the site</a>
@@ -54,7 +54,7 @@
       </div>
 
       <div class='work reveal'>
-        <img src="imgs/ecsite.jpg" class='work-img' alt='work-img'></img>
+        <img src="imgs/ecsite.png" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>E-Commerce Website</h3>
         <p class='site-desc'>This is my E-Commerce website featuring WooCommerce – a sneak peek of my future small business! With easy navigation and categories, finding what you want is a breeze. Check out the site and stay tuned for real products coming out in the near future!</p>
         <a href='https://cplusgear.chiakiy.com/' class='btn coffee-btn' target="_blank" rel="noreferrer">See the site</a>
@@ -62,14 +62,14 @@
       </div>
 
       <div class='work reveal'>
-        <img src="imgs/movie-watchlist.jpg" class='work-img' alt='work-img'></img>
+        <img src="imgs/movie-watchlist.png" class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Movie Watchlist</h3>
         <p class='site-desc'>Check out my React-based movie watchlist application, where you can search for your favorite films and save them to your list for future viewing! Once you've watched a movie, you can move it to the watched list by simply clicking the eye icon.</p>
         <a href='https://movie-watchlist-cy.netlify.app' class='btn' target="_blank" rel="noreferrer">See the site</a>
       </div>
 
       <div class='work reveal'>
-        <img src="imgs/recipe.jpg"class='work-img' alt='work-img'></img>
+        <img src="imgs/recipe.png"class='work-img' alt='work-img'></img>
         <h3 class='site-title'>Recipe App</h3>
         <p class='site-desc'>Check my recipe app designed for me and my partner as an international couple and vegetable lover! Easy to find our favorites and get ingredients and instructions without reading long summaries commonly found on recipe websites!</p>
         <a href='https://foodie-recipe-cy.netlify.app' class='btn' target="_blank" rel="noreferrer">See the site</a>
@@ -79,20 +79,18 @@
 
     </div>
   </main>
-
-
   
-
   <footer>
     <div class="footer-container">
       <div class="footer-contact">
         <p>Contact:</p>
         <a href="mailto:info@chiakiy.com">info@chiakiy.com</a>
       </div>
+      <div class="footer-icon">
+        <a href="https://www.linkedin.com/in/chiaki-y-ab290a206"><img src="imgs/linkedin.svg" alt="linkedin-icon"></a>
+        <a href="https://github.com/chiaki-yamada"><img src="imgs/github.svg" alt="github-icon"></a>        
+      </div>
       <p class='copy-right'>© 2023 Chiaki Yamada</p>
-    </div> 
-    <div class="footer-img">
-      <img src="imgs/footer.png" class="footer-img" alt="footer-img"></img>
     </div> 
   </footer>
 
