--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="slider-logo">
                 <img src="imgs/wordpress-b.svg" alt="icon">
               </div>
-              <p><a href="https://vjls-jh.com" class="arrow">View This Work</a></p>
+              <p><a href="https://vjls-jh.com" class="arrow">View This Site</a></p>
             </div>
           </div>
 
@@ -109,7 +109,12 @@
                 <img src="imgs/javascript-b.svg" alt="icon">
                 <img src="imgs/php-b.svg" alt="icon">
               </div>
-              <p><a href="https://best-gourmet-coffee.netlify.app" class="arrow">View This Work</a></p>
+              <div class="work-btn">
+                <p><a href="https://best-gourmet-coffee.netlify.app" class="arrow">View This Site</a></p>
+                <p><a href="https://drive.google.com/file/d/15nCqZB0VfOOUNYu3wb-lwIM0uo1dMA_p/view" class="arrow">Project Detail</a></p>
+
+              </div>
+             
             </div>
           </div>
 
@@ -130,7 +135,7 @@
                 <img src="imgs/javascript-b.svg" alt="icon">
                 <img src="imgs/php-b.svg" alt="icon">
               </div>
-              <p><a href="https://cplusgear.chiakiy.com" class="arrow">View This Work</a></p>
+              <p><a href="https://cplusgear.chiakiy.com" class="arrow">View This Site</a></p>
             </div>
           </div>
 
@@ -150,7 +155,7 @@
                 <img src="imgs/react-b.svg" alt="icon">
                 
               </div>
-              <p><a href="https://movie-watchlist-cy.netlify.app" class="arrow">View This Work</a></p>
+              <p><a href="https://movie-watchlist-cy.netlify.app" class="arrow">View This Site</a></p>
             </div>
           </div>
 
@@ -169,7 +174,7 @@
                 <img src="imgs/javascript-b.svg" alt="icon">
                 <img src="imgs/react-b.svg" alt="icon">
               </div>
-              <p><a href="https://foodie-recipe-cy.netlify.app" class="arrow">View This Work</a></p>
+              <p><a href="https://foodie-recipe-cy.netlify.app" class="arrow">View This Site</a></p>
             </div>
           </div>
         </div>
