--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- tech stack -->
     <div class="tech-stack reveal">
-      <h1 class="title">Tech Stack</h1>
+      <h1 class="title">TECH STACK</h1>
       <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -73,7 +73,7 @@
 
     <!-- work slider -->
     <div class="slide-container swiper reveal">
-      <h1 class="title">Work</h1>
+      <h1 class="title">WORK</h1>
       <div class="slide-content">
         <div class="card-wrapper swiper-wrapper">
 
