--- a/index.html
+++ b/index.html
@@ -108,13 +108,8 @@
                 <img src="imgs/css-b.svg" alt="icon">
                 <img src="imgs/javascript-b.svg" alt="icon">
                 <img src="imgs/php-b.svg" alt="icon">
-              </div>
-              <div class="work-btn">
-                <p><a href="https://best-gourmet-coffee.netlify.app" class="arrow">View This Site</a></p>
-                <p><a href="https://drive.google.com/file/d/15nCqZB0VfOOUNYu3wb-lwIM0uo1dMA_p/view" class="arrow">Project Detail</a></p>
-
-              </div>
-             
+              </div>              
+              <p><a href="https://chiakiy.com/project" class="arrow">View This Work</a></p>            
             </div>
           </div>
 
