--- a/project.html
+++ b/project.html
@@ -43,10 +43,15 @@
         <ul class="project-desc">
           <li><span>&#10148;</span> Full Custom WordPress Theme</li>
           <li><span>&#10148;</span> Responsive Design</li>
+          <li><span>&#10148;</span> Easy and Consistent Posts Submission</li>
+          
         </ul>
         <p class="project-tech-stack">HTML/CSS/JavaScript/PHP/WordPress</p>
-        <p><a href="https://best-gourmet-coffee.netlify.app" class="project-link">View Sample Site</a></p>
-        <p><a href="https://www.bestgourmet.com" class="project-link">View Current Site</a></p>
+        <div class="site-link">
+          <p><a href="https://best-gourmet-coffee.netlify.app" class="project-link">View Sample Site</a></p>
+          <p><a href="https://www.bestgourmet.com" class="project-link">View Current Site</a></p>
+        </div>
+        
       </div>
     </div>   
   </main>
@@ -55,13 +60,13 @@
       <h2 class='title'>IMPROVEMENTS</h2>
 
       <div class="improvement">     
-        <div class="project-img">
-          <img src="#" alt="#" class="work-img">
-        </div>
         <ul>
-          <li>Unified colors and fonts, and added a logo.</li>
-          <li>Streamlined navigation menu items and implemented hover colors.</li>
+          <li><span>&#10166;</span> Unified colors and fonts, and added a logo.</li>
+          <li><span>&#10166;</span> Streamlined navigation menu items and implemented hover colors.</li>
         </ul>
+        <div class="project-img">
+          <img src="imgs/project1.jpg" alt="work-img" class="work-img project1-img">
+        </div>
       </div>
     </div> 
   </div>
@@ -69,25 +74,25 @@
   <div class="project-wrapper"> 
     <div class="improvement-w">     
       <div class="project-img">
-        <img src="#" alt="#" class="work-img">
+        <img src="imgs/project2.jpg" alt="work-img" class="work-img">
       </div>
       <ul>
-        <li>Incorporated a featured Image option for easy addition and specification of image size when editing a post or page</li>
-        <li>Established a color palette with specified colors to ensure brand color unification</li>
+        <li><span>&#10166;</span> Incorporated a featured Image option for easy addition and specification of image size when editing a post or page</li>
+        <li><span>&#10166;</span> Established a color palette with specified colors to ensure brand color unification</li>
       </ul>
     </div>
   </div>
 
   <div class="project-container2">
     <div class="project-wrapper">
-      <div class="improvement">     
-        <div class="project-img">
-          <img src="#" alt="#" class="work-img">
-        </div>
+      <div class="improvement">           
         <ul>
-          <li>Implemented custom posts using ACF(Advanced Custom Fields), revamped icons, and brought it to the top of the admin dashboard to enhance ease of client posting.</li>
-          <li>Integrated ACF for simplified and consistent article submission.</li>
+          <li><span>&#10166;</span> Implemented custom posts using ACF(Advanced Custom Fields), revamped icons, and brought it to the top of the admin dashboard to enhance ease of client posting.</li>
+          <li><span>&#10166;</span> Integrated ACF for simplified and consistent article submission.</li>
         </ul>
+        <div class="project-img">
+          <img src="imgs/project3.jpg" alt="work-img" class="work-img">
+        </div>
       </div>
     </div>
   </div>
@@ -95,11 +100,11 @@
   <div class="project-wrapper">
     <div class="improvement-w">     
       <div class="project-img">
-        <img src="#" alt="#" class="work-img">
+        <img src="imgs/project4.jpg" alt="work-img" class="work-img">
       </div>
       <ul>
-        <li>Specified a specific category(popular products) and displayed three posts from that category on the home page.</li>
-        <li>Displayed the three most recent posts from a specific archive on the home page, showing the first 15 words of each post's content.</li>
+        <li><span>&#10166;</span> Specified a specific category(popular products) and displayed three posts from that category on the home page.</li>
+        <li><span>&#10166;</span> Displayed the three most recent posts from a specific archive on the home page, showing the first 15 words of each post's content.</li>
       </ul>
     </div>
   </div>
